--- a/src/main/resources/META-INF/resources/WEB-INF/jsp/comman/footer.jspf
+++ b/src/main/resources/META-INF/resources/WEB-INF/jsp/comman/footer.jspf
@@ -3,5 +3,10 @@
 <script
 	src="webjars/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.standalone.min.css"></script>
 <script
-	src="webjars/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+	src="webjars/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js">
+	
+</script>
 
+
+</body>
+</html>
